backend/k8/istio-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: customer-service-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-service
spec:
  hosts:
    - "*"
  gateways:
    - customer-service-gateway
  http:
    - match:
        - uri:
            exact: /customer-service
      route:
        - destination:
            host: customer-service
            port:
              number: 8080
