backend/k8/istio-gateway-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: customer-service-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-service
spec:
  hosts:
    - "*"
  gateways:
    - customer-service-gateway
  http:
    - name: "customer-service-routes"
      match:
        - uri:
            exact: /customer-service
        - uri:
            prefix: /api/v1/
      route:
        - destination:
            host: customer-service
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: customer-service
spec:
  host: customer-service
  subsets:
    - name: v1
      labels:
        version: v1
---
